# MiniProject

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TrainMain  a.out  cmake_install.cmake  compartment.h  main.cpp  makefile  train-mini-project.cbp  train-mini-project.depend  train-mini-project.layout  train.h  train.out  train_test.cpp  umldiagram.mdj
.github/workflows/: CI-Cmake.yml  UnitTest.yml  Valgrind.yml  c-cpp.yml  manual.yml
sourcetrail/: sourcetrail.srctrldb  sourcetrail.srctrlprj
static-dynamic-linking/: d1.out  s2.out
